Fixed some of our layout problems

--- a/RisingCreations/src/main/resources/static/css/master.css
+++ b/RisingCreations/src/main/resources/static/css/master.css
@@ -8,16 +8,19 @@
 }
 
 #sidebar {
-    position: relative;
+    position: fixed;
     width: 250px;
-    /* position: fixed; */
     top: 0;
     left: 0;
-    /* height: 100%; */
+    height: 100%;
     z-index: 999;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
+}
+
+#content-container {
+    margin-left: 250px;
 }
 
 #sidebar.active {
